# StormTracker

./: .gitignore  DAMAGE_TAB_UPDATE_SUMMARY.md  FORECAST_FEATURE_GUIDE.md  QUICK_START.md  README.md  package-lock.json  package.json  readme.md  tsconfig.json
backend/: README.md  alembic.ini  extract_and_inject_damages.py  insert_forecast_sample.py  pyproject.toml  summarize_news.py
backend/alembic/: env.py
backend/alembic/versions/: 7d50713679ef_add_forecasts_table.py  a1b2c3d4e5f6_update_rescue_requests_table.py  b5ce7c350237_change_storm_id_to_string_type.py  d1b5326d6e03_update_news_sources_table.py  e2f3g4h5i6j7_update_damage_assessment_table.py  f9a8b7c6d5e4_recreate_damage_assessment_table.py  g8h9i0j1k2l3_remove_social_post_id_from_rescue.py  h1i2j3k4l5m6_create_damage_details_table.py
backend/app/: databases.py  main.py
backend/app/models/: storm_models.py
backend/app/routers/: storms.py
backend/app/schemas/: storm_schemas.py
backend/src/: config.py  constants.py  database.py  dependencies.py  logger.py  main.py  models.py  schemas.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/chatbot/: __init__.py  agent.py  demo.py  router.py  schemas.py  seed_knowledge.py  service.py  tools.py  websocket_demo.html
backend/src/core/: extract_damage_assesments.py
backend/src/damage/: __init__.py  model.py  router.py  service.py
backend/src/damage_details/: extraction_service.py  geocoding_service.py  model.py  processing_service.py  router.py  service.py
backend/src/forecasts/: model.py  router.py  (+1 more)
(+224 files in other folders)
