[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.2",
    "firecrawl-py>=4.8.0",
    "geopy>=2.4.1",
    "googlemaps>=4.10.0",
    "httpx>=0.28.1",
    "opencage>=3.2.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
    "tqdm>=4.67.1",
]
